--- a/views/eachticket.html
+++ b/views/eachticket.html
@@ -18,15 +18,18 @@
         <button class="close-button">Close</button>
         <div class="details-section">
             <span>Ticket ID: </span><span id="ticket-id">1234</span>
+            <hr>
             <h3 id="ticket-title">Ticket Title</h3>
             <p id="ticket-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <span id="ticket-priority">high</span>
         </div>
+        <hr>
         <div class="person-section">
             <h3>Assigned Person</h3>
-            <p>Name: John Doe</p>
-            <p>Expertise: Technical Support</p>
+            <p id="e-name">Name: John Doe</p>
+            <p id="e-expertise">Expertise: Technical Support</p>
         </div>
+        <hr>
         <div class="chat-section">
             <h3>Chat</h3>
             <div class="chat-messages">
