--- a/views/index.html
+++ b/views/index.html
@@ -92,6 +92,14 @@
 
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" required>
+
+      <label for="department">Department:</label>
+      <select id="department" name="department">
+        <option value="software">Software</option>
+        <option value="hardware">Hardware</option>
+        <option value="network">Network</option>
+        <option value="help">Help</option>
+      </select>
   
       <label for="description">Description:</label>
       <input type="text" id="description" name="description" required>
@@ -114,6 +122,7 @@
           <th>Title</th>
           <th>Description</th>
           <th>Priority</th>
+          <th>Department</th>
         </tr>
       </table>
 </div>
