--- a/views/tickets.html
+++ b/views/tickets.html
@@ -92,6 +92,9 @@
         .ticket:hover .ticket-id {
             display: block;
             font-weight: bold;
+            display: flex;
+            justify-content: space-between;
+            padding: 10px 1rem;
         }
 
     </style>
