--- a/views/eachticket.html
+++ b/views/eachticket.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/">Home</a>
-        <a href="/tickets">Ticket</a>
-        <a href="#signup">Signup</a>
+        <a id="nav1" href="/">Home</a>
+        <a id="nav2" href="/tickets">Ticket</a>
+        <a id="nav3" href="#signup">Signup</a>
     </div>
 
     <div class="ticket-details">
         <h2>Ticket Details</h2>
-        <button class="close-button">Close</button>
+        <button id="close-button" class="close-button">Close</button>
         <div class="details-section">
             <span>Ticket ID: </span><span id="ticket-id">1234</span>
             <hr>
@@ -34,9 +34,9 @@
         <div class="chat-section">
             <h3>Chat</h3>
             <div id="chat-messages" class="chat-messages">
-                <!-- <div class="message">
-                    <span class="sender">John Doe:</span> Hi, how can I assist you?
-                </div> -->
+                <div class="message">
+                    <span class="sender">BOT:</span> Hi, how can I assist you?
+                </div>
                 <!-- <div class="message">
                     <span class="sender">User:</span> I'm having trouble with my account.
                 </div> -->
@@ -44,6 +44,8 @@
             </div>
             <div class="input-box">
                 <input type="text" id="message-input" placeholder="Type your message...">
+                <input type="file" id="file-input" name="ticket-chat-img" accept="image/*, .pdf, .docx" >
+                <!-- <button id="file-btn"><img width="25" height="25" src="https://img.icons8.com/ios/50/attach.png" alt="attach"/></button> -->
                 <button id="send-button" class="send-button">Send</button>
             </div>
         </div>
