--- a/views/eachticket.html
+++ b/views/eachticket.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <a id="nav1" href="/">Home</a>
         <a id="nav2" href="/tickets">Ticket</a>
-        <a id="nav3" href="#signup">Signup</a>
+        <a id="nav3" href="/logout">Logout</a>
     </div>
 
     <div class="ticket-details">
