--- a/views/employeetickets.html
+++ b/views/employeetickets.html
@@ -99,7 +99,7 @@
 <body>
     <div class="navbar">
         <a href="/et">Home</a>
-        <a href="#signup">Signup</a>
+        <a href="/logout">Logout</a>
     </div>
 
     <div class="container" id="ticket-container">
