--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
 <div class="navbar">
   <a href="/">Home</a>
   <a href="/tickets">Ticket</a>
-  <a href="#signup">Signup</a>
+  <a href="/logout">Logout</a>
 </div>
 <div class="form-container">
     <form id="ticket-form" action="/add-ticket" method="post">
