--- a/views/admin-add.html
+++ b/views/admin-add.html
@@ -18,12 +18,23 @@
             min-height: 100vh;
         }
 
-        header {
+        .navbar {
             background-color: #333;
-            color: #fff;
+            overflow: hidden;
+        }
+
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
             text-align: center;
-            padding: 10px;
-            width: 100%;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
         }
 
         .dashboard-container {
@@ -156,13 +167,20 @@
         .filters{
             padding-top: 14px;
         }
+        
     </style>
 </head>
 <body>
 
-    <header>
+    <!-- <header>
         <h1>Tickets Dashboard</h1>
-    </header>
+        <a href="/add-anyone">Add</a>
+    </header> -->
+    <div class="navbar">
+        <a href="/tickets">Ticket</a>
+        <a href="/add-anyone">Add</a>
+        <a href="/logout">Logout</a>
+    </div>
 
     <div class="dashboard-container">
         <div class="left-section">
