--- a/views/signup.html
+++ b/views/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Signup Page</title>
     <style>
         body {
             margin: 0;
@@ -12,7 +12,7 @@
             background-color: #f0f0f0;
         }
 
-        .login-container {
+        .signup-container {
             background-color: #ffffff;
             max-width: 400px;
             margin: 100px auto;
@@ -43,7 +43,7 @@
             border-radius: 5px;
         }
 
-        #login-form {
+        #signup-form {
             margin-right: 1.5em;
         }
 
@@ -63,18 +63,16 @@
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h1>Login</h1>
-        <form action="/client-login-data" id="login-form" method="post">
+    <div class="signup-container">
+        <h1>Signup</h1>
+        <form action="/client-signup-data" id="signup-form" method="post">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            <button type="submit">Login</button>
+            <button type="submit">Signup</button>
             <hr>
-            <a href="/signup">Sign Up</a>
-            <hr>
-            <a href="/employee">Employee Login</a>
+            <a href="/employee">Employee Signup</a>
         </form>
     </div>
 </body>
