--- a/views/tickets.html
+++ b/views/tickets.html
@@ -103,7 +103,7 @@
     <div class="navbar">
         <a href="/">Home</a>
         <a href="/tickets">Ticket</a>
-        <a href="#signup">Signup</a>
+        <a href="/logout">Logout</a>
     </div>
 
     <div class="container" id="ticket-container">
