--- a/views/add-emp.html
+++ b/views/add-emp.html
@@ -103,9 +103,9 @@
         <!-- Admin Registration Form -->
         <form action="/admin-cred" id="admin-form" method="post">
             <input type="text" placeholder="Admin ID" name="adminid" required>
-            <input type="text" placeholder="Name" name="admin-name" required>
-            <input type="email" placeholder="Email" name="admin-email" required>
-            <input type="password" placeholder="Password" name="admin-password" required>
+            <input type="text" placeholder="Name" name="name" required>
+            <input type="email" placeholder="Email" name="email" required>
+            <input type="password" placeholder="Password" name="password" required>
             <button type="submit">Register as Admin</button>
         </form>
 
