--- a/views/signup.html
+++ b/views/signup.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-image: url("https://images.pexels.com/photos/235985/pexels-photo-235985.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
         }
 
         .signup-container {
@@ -71,8 +71,6 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Signup</button>
-            <hr>
-            <a href="/employee">Employee Signup</a>
         </form>
     </div>
 </body>
