--- a/views/add-emp.html
+++ b/views/add-emp.html
@@ -84,11 +84,25 @@
             background-color: #ddd;
             color: black;
         }
+
+        .notification {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            display: none;
+            z-index: 9999;
+        }
+
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="/tickets">Ticket</a>
+        <a href="/admin">Ticket</a>
         <a href="/add-anyone">Add</a>
         <a href="/logout">Logout</a>
     </div>
@@ -126,6 +140,29 @@
         </form>
     </div>
 
+    <div id="notification" class="notification">
+        Email sent successfully!
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            function getUrlParameter(name) {
+                name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
+                var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
+                var results = regex.exec(location.search);
+                return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+            }
+        
+            var successParam = getUrlParameter('success');
+            if (successParam === 'true') {
+                $("#notification").show();
+
+                setTimeout(function() {
+                    $("#notification").hide();
+                }, 5000); 
+            }
+        });
+        </script>
     <script src="/static/add-emp.js"></script>
 </body>
 </html>
